# anthropic-a2ui

./: .gitignore  AUDIT_0.1.2.md  AUDIT_0.1.3.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: hello_a2ui.py
fire_test/: gen_viewer.py  gen_viewer_natural.py  run_exhaustive.py  run_fire_test.py  run_natural.py
src/anthropic_a2ui/: __init__.py  parts.py  prompt_builder.py  repair.py  retry.py  stream_parser.py  tool.py  version.py
src/anthropic_a2ui/_internal/: __init__.py
tests/: __init__.py  _a2ui_specs.py  _function_specs.py  conftest.py  test_components.py  test_cross_catalog.py  test_e2e.py  test_fire_natural.py  test_functions.py  test_improvements.py  test_messages.py  test_multi_catalog.py  test_new_features.py  test_parts.py  test_prompt_builder.py  test_properties.py  test_regressions_012.py  test_repair.py  test_stream_parser.py  test_tool.py
tests/assets/: minimal_catalog.json
