[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anthropic-a2ui"
dynamic = ["version"]
description = "Que Claude genere interfaces de usuario con A2UI en sus respuestas."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["a2ui", "anthropic", "claude", "generative-ui", "agent", "ui"]
dependencies = [
  "a2ui-agent-sdk>=0.2.4,<0.3",
  "anthropic>=0.40,<1",
  "jsonschema>=4.0",
]

[project.scripts]
pyink = "pyink:patched_main"

[tool.hatch.version]
path = "src/anthropic_a2ui/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/anthropic_a2ui"]

[tool.hatch.build.targets.sdist]
include = ["src/anthropic_a2ui", "README.md", "CHANGELOG.md", "LICENSE", "pyproject.toml"]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.pyink]
unstable = true
target-version = ["py310", "py311", "py312", "py313"]
pyink-indentation = 2
pyink-use-majority-quotes = true
pyink-annotation-pragmas = [
  "noqa",
  "pylint:",
  "type: ignore",
  "pytype:",
  "mypy:",
  "pyright:",
  "pyre-",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pyink>=24.10.0",
]