[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anthropic-a2ui"
dynamic = ["version"]
description = "Que Claude genere interfaces de usuario con A2UI en sus respuestas."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
maintainers = [{ name = "686f6c61" }]
keywords = ["a2ui", "anthropic", "claude", "generative-ui", "agent", "ui"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "a2ui-agent-sdk>=0.2.4,<0.3",
  "anthropic>=0.40,<1",
  "jsonschema>=4.0",
]

[project.urls]
Homepage = "https://github.com/686f6c61/anthropic-a2ui"
Repository = "https://github.com/686f6c61/anthropic-a2ui"
Issues = "https://github.com/686f6c61/anthropic-a2ui/issues"
Changelog = "https://github.com/686f6c61/anthropic-a2ui/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/anthropic_a2ui/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/anthropic_a2ui"]

[tool.hatch.build.targets.sdist]
include = ["src/anthropic_a2ui", "README.md", "CHANGELOG.md", "LICENSE", "pyproject.toml"]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.pyink]
unstable = true
target-version = ["py310", "py311", "py312", "py313"]
pyink-indentation = 2
pyink-use-majority-quotes = true
pyink-annotation-pragmas = [
  "noqa",
  "pylint:",
  "type: ignore",
  "pytype:",
  "mypy:",
  "pyright:",
  "pyre-",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pyink>=24.10.0",
]
